--- a/agencysite/style.css
+++ b/agencysite/style.css
@@ -123,3 +123,27 @@ footer{
     margin-bottom: 5px;
     background: #e6e6e6;
 }
+
+@media(max-width:768px){
+    header .branding,
+    header nav,
+    #boxes .box,
+    #sidebar,
+    #main-col{
+        float: none;
+        text-align: center;
+        width: 100%;
+    }
+
+    #showcase h1{
+        font-size: 25px;
+    }
+
+    #sidebar{
+        margin-bottom: 120px;
+    }
+
+    #boxes .box:nth-child(3){
+        margin-bottom: 80px;
+    }
+}
